--- a/index.html
+++ b/index.html
@@ -22,10 +22,38 @@
     </div>
     <hr/>
     <div id="staffGallery">
-      <img class="galleryImage" src="./assets/Eeyore-Eh.png"/>
-      <img class="galleryImage" src="./assets/Eeyore-Zz.png"/>
-      <img class="galleryImage" src="./assets/Kanga-Roo.png"/>
-      <img class="galleryImage" src="./assets/Owl-Phone.png"/>
+      <div class="card">
+        <img class="galleryImage" aria-label="Image of Eeyore Upside-Down" src="./assets/Eeyore-Eh.png"/>
+        <p>Upside-Down Eyeore</p>
+      </div>
+      <div class="card">
+        <img class="galleryImage" aria-label="Image of Eeyore Falling Asleep" src="./assets/Eeyore-Zz.png"/>
+        <p>Sleepy Eyeore</p>
+      </div>
+      <div class="card">
+        <img class="galleryImage" aria-label="Image of Kangaroo" src="./assets/Kanga-Roo.png"/>
+        <p>Kanga-Roo</p>
+      </div>
+      <div class="card">
+        <img class="galleryImage" aria-label="Image of Owl On Their Phone" src="./assets/Owl-Phone.png"/>
+        <p>Owl on Phone</p>
+      </div>
+      <div class="card">
+        <img class="galleryImage" aria-label="Image of a Cold Piglet" src="./assets/Piglet-Cold.png"/>
+        <p> Cold Piglet </p>
+      </div>
+      <div class="card">
+        <img class="galleryImage" aria-label="Image of Tigger with a lot of Energy" src="./assets/Tigger-Energy.png"/>
+        <p> Energetic Tigger </p>
+      </div>
+      <div class="card">
+        <img class="galleryImage" aria-label="Image of Tigger Jumping" src="./assets/Tigger-Jump.png"/>
+        <p>Jumping Tigger</p>
+      </div>
+      <div class="card">
+        <img class="galleryImage" aria-label="Image of Owl singing or listening to music" src="./assets/Owl-Music.png"/>
+        <p>Musical Owl</p>
+      </div>
     </div>
   </body>
 
